--- a/DP_2015-11-02/DP_2015-11-02/DP_2015-11-02.vcxproj
+++ b/DP_2015-11-02/DP_2015-11-02/DP_2015-11-02.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{46C11D7E-DB04-4746-9243-FA942C103C30}</ProjectGuid>
     <RootNamespace>DP_20151102</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>DP-Easy_2015-11-02</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
